--- a/src/modules/accounts/views/emails/forgotPassword.hbs
+++ b/src/modules/accounts/views/emails/forgotPassword.hbs
@@ -1,30 +1,38 @@
-<style>
-  .container {
-    width: 800px;
-    font-family: sans-serif;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
+<!DOCTYPE html>
+<html lang="pt-br">
 
-  span{
-    margin: 10px;
-  }
-</style>
+<head>
+  <style>
+    .container {
+      width: 800px;
+      font-family: sans-serif;
 
-<div class="container">
-  <img src="https://i.imgur.com/oUAKMC5.png" alt="Logo Rentx">
-  <span>Oi, {{name}}</span>
+    }
 
-  <br/>
-  <span>Você solicitou alteração de senha.</span>
-  <span>Para realizar a troca, clique no link
-    <a href={{link}}>{{link}}</a>></a>
-  </span>
+    span {
+      margin: 10px;
+      display: block;
+    }
+  </style>
+</head>
 
-  <span>Caso não tenha sido você quem solicitou a alteração de senha, basta ignorar este e-mail.</span>
+<body>
+  <div class="container">
+    <img src="https://i.imgur.com/oUAKMC5.png" alt="Logo Rentx">
+    <span>Oi, {{name}}</span>
 
-  <strong>Obrigado!</strong>
+    <br />
+    <span>Você solicitou alteração de senha.</span>
+    <span>Para realizar a troca, clique no link
+      <a href={{link}}>{{link}}</a>></a>
+    </span>
 
-  <h3>Equipe | <strong>RentX</strong></h3>
-</div>
+    <span>Caso não tenha sido você quem solicitou a alteração de senha, basta ignorar este e-mail.</span>
+
+    <strong>Obrigado!</strong>
+
+    <h3>Equipe | <strong>RentX</strong></h3>
+  </div>
+</body>
+
+</html>
